--- a/Ejercicio1.ipynb
+++ b/Ejercicio1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "c1eee843",
    "metadata": {},
    "outputs": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "4f676f44",
    "metadata": {},
    "outputs": [
@@ -56,7 +56,7 @@
    "source": [
     "variable_Carro =10\n",
     "variable_carro2=20\n",
-    "print(variable_Carro + variable_carro2)\n"
+    "print(variable_Carro + variable_carro2)"
    ]
   }
  ],
