--- a/Ejercicio1.ipynb
+++ b/Ejercicio1.ipynb
@@ -58,6 +58,28 @@
     "variable_carro2=20\n",
     "print(variable_Carro + variable_carro2)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "a88b0fb1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "El caballo es más rápido que la liebre\n"
+     ]
+    }
+   ],
+   "source": [
+    "caballo = 10\n",
+    "liebre = 5\n",
+    "if caballo > liebre:\n",
+    "    print(\"El caballo es más rápido que la liebre\")\n",
+    "    "
+   ]
   }
  ],
  "metadata": {
